# rt-engine

./: .clang-format  .gitignore  CMakeLists.txt  Core.hpp  ECS.md  LICENSE  Prefab.cpp  Prefab.hpp  README.md  Signature.hpp  build_cmake.bat  compile_shaders.bat  conanfile.py  configure_cmake.sh  create_sln.bat  ecs.cpp  imgui.ini
.github/workflows/: ci.yml  linux.yml  webassembly.yml  windows.yml
Builder/: Builder.hpp
Component/: Component.hpp  ComponentArray.hpp  ComponentManager.hpp
Entity/: Entity.hpp  EntityManager.hpp
RoarSandbox/: CMakeLists.txt  RoarSandbox.cs  RoarSandbox.csproj
RoarScriptCore/: CMakeLists.txt  RoarScriptCore.cs  RoarScriptCore.csproj
System/: GravitySystem.hpp  InputControllerSystem.hpp  RendererSystem.hpp  System.hpp  SystemManager.hpp
client/: CMakeLists.txt  client.cpp  client.h
core/: Application.cpp  Application.h  CMakeLists.txt  Common.h  CoreTests.cpp  EditorLayer.cpp  EditorLayer.h  Event.h  InputEvents.h  Inputevents.h  Layer.cpp  Layer.h  ProjectManager.cpp  ProjectManager.h  RTEConfig.h  RTEngine.cpp  RoarConfig.h  RoarEngine.cpp  RoarEngine.h  SceneLayer.cpp  SceneLayer.h  Scripting.cpp  Scripting.h  Window.cpp  Window.h  WindowEvents.h  Windowevents.h  application.cpp  framework.h  pch.h  scenemanager.h  shared.cpp  shared.h  window.cpp  window.h
core/editor/: CMakeLists.txt  main.cpp
csharp-sandbox/: CMakeLists.txt  sandbox.cs
docs/html/: _c_o_n_v_e_n_t_i_o_n_s_8md.html  _r_e_a_d_m_e_8md.html  annotated.html  class_client-members.html  class_client.html  class_message_buffer-members.html  class_message_buffer.html  class_network-members.html  class_network.html  class_network_base-members.html  class_network_base.html  class_network_client-members.html  class_network_client.html  class_network_server-members.html  class_network_server.html  class_server-members.html  class_server.html  classes.html  client_8cpp.html  client_8h.html  client_8h_source.html  dir_41e1742e44e2de38b3bc91f993fed282.html  dir_4270bfced15e0e73154b13468c7c9ad9.html  dir_db3a54907829b36871118d03417739cd.html  doxygen_crawl.html  files.html  framework_8h.html  framework_8h_source.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_vars.html  group__config.html  group__messages.html  group__serialization.html  (+38 more)
docs/latex/: _c_o_n_v_e_n_t_i_o_n_s_8md.tex  annotated.tex  class_client.tex  class_message_buffer.tex  class_network.tex  class_network_base.tex  class_network_client.tex  class_network_server.tex  class_server.tex  client_8cpp.tex  client_8h.tex  client_8h_source.tex  dir_41e1742e44e2de38b3bc91f993fed282.tex  dir_4270bfced15e0e73154b13468c7c9ad9.tex  dir_db3a54907829b36871118d03417739cd.tex  dirs.tex  files.tex  framework_8h.tex  framework_8h_source.tex  group__config.tex  group__messages.tex  group__serialization.tex  group__serialize__funcs.tex  hierarchy.tex  index.tex  mainpage_8dox.tex  md__c_o_n_v_e_n_t_i_o_n_s.tex  md__r_e_a_d_m_e.tex  message_8h.tex  message_8h_source.tex  network_8cpp.tex  network_8h.tex  network_8h_source.tex  pch_8cpp.tex  pch_8h.tex  pch_8h_source.tex  refman.tex  server_8cpp.tex  server_8h.tex  server_8h_source.tex  (+12 more)
ecs/: CMakeLists.txt  Component.h  ECS.h  GuiSystem.cpp  GuiSystem.h  RenderSystem.cpp  RenderSystem.h  ScriptSystem.cpp  ScriptSystem.h  ecs.cpp  ecs.hpp
editor/: CMakeLists.txt  Editor.cpp
include/: Application.h  Box2DPhysics.h  Builder.h  CameraSystem.h  ClientRenderSystem.h  CollisionSystem.h  Common.h  Component.h  ComponentArray.h  ComponentManager.h  Entity.h  EntityManager.h  Entrypoint.h  Event.h  GravitySystem.h  GuiSystem.h  INetwork.h  IPhysics.h  IPlugin.h  InputControllerSystem.h  InputEvents.h  MissileSystem.h  Networking.h  PhysicCore.h  PluginManager.h  Prefab.h  RenderSystem.h  RendererSystem.h  RoarEngine.h  Scene.h  Signature.h  System.h  SystemManager.h  VelocitySystem.h  WindowEvents.h  framework.h  r-type.h
mono/lib/: MonoPosixHelper.exp  MonoPosixHelper.lib  eglib.lib  libgcmonosgen.lib  libmonoutils.lib  libtest.exp  libtest.lib  mono-2.0-dac-sgen.exp  mono-2.0-dac-sgen.lib  mono-2.0-sgen.exp  mono-2.0-sgen.lib
networking/: CMakeLists.txt  Networking.cpp  Networking.h
projects/VS2022/: r-type.sln
projects/VS2022/box2d/: box2d.vcxproj
projects/VS2022/r-type/: r-type.vcxproj
projects/VS2022/r-type_client/: r-type_client.vcxproj
projects/VS2022/r-type_core/: r-type_core.vcxproj
projects/VS2022/r-type_server/: r-type_server.vcxproj  r-type_server.vcxproj.filters
projects/VS2022/raylib/: raylib.vcxproj
renderer/: CMakeLists.txt  CommandLineParser.hpp  Entrypoint.h  Renderer.cpp  Renderer.h  TextureExample.cpp  VulkanBuffer.cpp  VulkanBuffer.h  VulkanDebug.cpp  VulkanDebug.h  VulkanDevice.cpp  VulkanDevice.h  VulkanInitializers.hpp  VulkanSwapChain.cpp  VulkanSwapChain.h  VulkanTexture.cpp  VulkanTexture.h  VulkanTools.cpp  VulkanTools.h  VulkanUIOverlay.cpp  VulkanUIOverlay.h  base.cpp  base.h  benchmark.hpp  camera.hpp  framework.h  imconfig.h  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_internal.h  imgui_widgets.cpp  imstb_rectpack.h  imstb_textedit.h  imstb_truetype.h  keycodes.hpp  main.cpp  renderer.cpp  renderer.h  (+1 more)
rtmodule/: rt.cs
samples/: CMakeLists.txt  main.cpp
samples/SpaceInvaders/: .gitignore  SpaceInvaders.csproj
samples/SpaceInvaders/Source/: Main.cs
samples/pong/: pong.csproj
samples/pong/Scenes/: Game.ro
samples/r-type/: CMakeLists.txt  client.cpp  server.cpp
samples/snake/: snake.csproj
server/: CMakeLists.txt  server.cpp  server.h
src/: Application.cpp  Box2DPhysics.cpp  CMakeLists.txt  ECSDemo.cpp  GuiSystem.cpp  Layer.cpp  Makefile  Networking.cpp  Networking.h  PhysicsPlugin.cpp  Platformer.cpp  PluginManager.cpp  Prefab.cpp  RenderSystem.cpp  RoarEngine.cpp  TestGame.cpp  TestPlugin.cpp  client.cpp  client.h  nbnet.h  r-type.cpp  r-type_client.cpp  r-type_client_ecs.cpp  r-type_server.cpp  raylib_game.rc  server.cpp  server.h  shared.cpp  shared.h
src/resources/scripts/: ui.lua
(+6 files in other folders)
