cmake_minimum_required(VERSION 3.28)

project(RoarEngine)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
set(COMMON_OUTPUT_DIR "${CMAKE_BINARY_DIR}/bin")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${COMMON_OUTPUT_DIR}")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${COMMON_OUTPUT_DIR}")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${COMMON_OUTPUT_DIR}")

find_package(spdlog REQUIRED)
find_package(raylib REQUIRED)
find_package(asio REQUIRED)
find_package(glm REQUIRED)

add_subdirectory(src)
